--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
-style.css
-
 body {
 	background-color: slateblue;
 	color: white;
+	font-family: Helvetica;
 }
 
+p {
+	color: black;
+}
+
+ul {
+	color: black;
+}
+
+
+#pic {
+	height: 300px;
+	width: auto;
+}
