--- a/style.css
+++ b/style.css
@@ -6,12 +6,22 @@ body {
 
 p {
 	color: black;
+	width: 50%;
 }
 
 ul {
 	color: black;
+	width: 50%;
 }
 
+div.index {
+	margin: auto;
+	text-align: center;
+}
+
+div.links {
+	font-size: 20px;
+}
 
 #pic {
 	height: 300px;
